@@ -344,7 +344,7 @@ SQLRETURN SQLDisconnect( SQLHDBC connection_handle )
 
         if ( ret == SQL_SUCCESS_WITH_INFO )
 	    {
-	        function_return_ex( SQL_HANDLE_DBC, connection, ret, TRUE );
+	        function_return_ex( IGNORE_THREAD, connection, ret, TRUE );
         }
         
         /*
